--- a/tox.ini
+++ b/tox.ini
@@ -1,55 +1,43 @@
 [tox]
-envlist = py{38, 39, 310, 311}
+env_list = py{38,39,310,311}
 requires =
-    tox ~=3.25
-    tox-gh-actions ~= 2.11
-isolated_build = True
-
-[gh-actions]
-python =
-    3.8: py38
-    3.9: py39
-    3.10: py310
-    3.11: py311
+    tox >= 4
 
 [common_dep]
 deps =
     types-beautifulsoup4
 
 [testenv]
-commands = pytest {posargs}
 deps =
     pytest-mypy-plugins ~= 1.10, != 1.10.0
     {[testenv:mypy]deps}
+commands = pytest {posargs}
 
 [testenv:format]
 deps =
     black
     isort>=5
-skip_install = true
+package = skip
 commands =
-    isort --check-only --diff lxml-stubs
-    black --check --diff -v lxml-stubs
+    isort --check-only --diff {posargs:lxml-stubs}
+    black --check --diff -v {posargs:lxml-stubs}
 
 [testenv:mypy]
 deps =
     mypy == 1.1.*
     {[common_dep]deps}
-skip_install = true
-commands =
-    mypy
+package = skip
+commands = mypy {posargs}
 
 [testenv:pyright]
 deps =
     pyright >= 1.1.288
     {[common_dep]deps}
-skip_install = true
-commands =
-    pyright lxml-stubs
+package = skip
+commands = pyright {posargs}
 
 [testenv:build]
 deps =
     build
-skip_install = true
-commands =
-    python -m build
+package = skip
+commands = python -m build {posargs}
