--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-env_list = py{38,39,310,311}
+env_list = py38-stub, py{39,310,311}-stub
 requires =
     tox >= 4
 
@@ -7,11 +7,12 @@ requires =
 deps =
     types-beautifulsoup4
 
-[testenv]
+[testenv:py{38,39,310,311}-stub]
 deps =
     pytest-mypy-plugins ~= 1.10, != 1.10.0
     {[testenv:mypy]deps}
-commands = pytest {posargs}
+    pytest-xdist ~= 3.1
+commands = pytest -n auto --dist loadfile {posargs} test-stub
 
 [testenv:format]
 deps =
@@ -31,7 +32,7 @@ commands = mypy {posargs}
 
 [testenv:pyright]
 deps =
-    pyright >= 1.1.288
+    pyright >= 1.1.289
     {[common_dep]deps}
 package = skip
 commands = pyright {posargs}
