Turns out tox-gh-actions is unavoidable for more complex setup

--- a/.github/workflows/test_inc.yml
+++ b/.github/workflows/test_inc.yml
@@ -77,7 +77,7 @@ jobs:
         name: dist
 
     - name: Install tox
-      run: pip install -v tox
+      run: pip install -v "tox > 4" "tox-gh-actions == 3.1.*"
 
     - name: Test stubs
       shell: bash
