Simplistic PoC for runtime stub tests using typeguard and pyright
Cooked up something that compares runtime variable type from typeguard, and static type from pyright. This can prove stubs are really doing correct thing. Only small tests on iterwalk() for now; hopefully it could become full-blown in future

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,8 +37,9 @@ dev = [
     'black',
     'isort',
     'mypy == 1.1.*',
-    'pyright >= 1.1.288',
-    'lxml ~= 4.9',
+    'pyright == 1.1.*, >= 1.1.289',
+    'lxml == 4.9.*',
+    'typeguard > 3'
 ]
 
 [tool.pdm.version]
