--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-env_list = py38-stub, py{39,310,311}-stub
+env_list = py{38,39,310,311}-stub, py{310,311}-rt
 requires =
     tox >= 4
 
@@ -20,6 +20,14 @@ deps =
     {[testenv:mypy]deps}
     pytest-xdist ~= 3.1
 commands = pytest -n auto --dist loadfile {posargs} test-stub
+
+[testenv:py{310,311}-rt]
+deps =
+    typeguard >= 3
+    {[testenv:pyright]deps}
+    pytest >= 7
+    lxml == 4.9.*
+commands = pytest {posargs} test-rt
 
 [testenv:format]
 deps =
