--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ requires-python = '>=3.8'
 license = {text = 'Apache-2.0'}
 dependencies = [
     'types-beautifulsoup4',
+    'typing_extensions ~= 4.5'
 ]
 keywords = ['lxml', 'typing', 'stubs', 'annotation']
 authors = [
@@ -34,12 +35,13 @@ homepage = 'https://github.com/abelcheung/types-lxml'
 [project.optional-dependencies]
 dev = [
     'pytest-mypy-plugins ~= 1.10, != 1.10.0',
+    'pytest >= 7',
     'black',
-    'isort',
+    'isort >= 5',
     'mypy == 1.1.*',
     'pyright == 1.1.*, >= 1.1.289',
     'lxml == 4.9.*',
-    'typeguard > 3'
+    'typeguard == 3.0.*'
 ]
 
 [tool.pdm.version]
