--- a/tox.ini
+++ b/tox.ini
@@ -23,11 +23,13 @@ commands = pytest -n auto --dist loadfile {posargs} test-stub
 
 [testenv:py{310,311}-rt]
 deps =
-    typeguard >= 3
+    typeguard == 3.0.*
     {[testenv:pyright]deps}
     pytest >= 7
     lxml == 4.9.*
-commands = pytest {posargs} test-rt
+commands =
+    pyright test-rt
+    pytest {posargs} test-rt
 
 [testenv:format]
 deps =
@@ -47,7 +49,7 @@ commands = mypy {posargs}
 
 [testenv:pyright]
 deps =
-    pyright >= 1.1.289
+    pyright == 1.1.*, >= 1.1.289
     {[common_dep]deps}
 package = skip
 commands = pyright {posargs}
