--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,6 +75,7 @@ extra_standard_library = [
 [tool.pyright]
 include = ['lxml-stubs']
 reportPrivateUsage = false
+typeCheckingMode = 'strict'
 
 [tool.mypy]
 packages = 'lxml-stubs'
