Remove pytest-xdist from test dependency
Once failure happens in testsuite, it can turn normal fail messages
into very hard to read internal errors

--- a/tox.ini
+++ b/tox.ini
@@ -18,8 +18,7 @@ deps =
 deps =
     pytest-mypy-plugins ~= 1.10, != 1.10.0
     {[testenv:mypy]deps}
-    pytest-xdist ~= 3.1
-commands = pytest -n auto --dist loadfile {posargs} test-stub
+commands = pytest {posargs} test-stub
 
 [testenv:py{310,311}-rt]
 deps =
