Tweaking tox posargs to help manual testing

--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@ deps =
 deps =
     pytest-mypy-plugins ~= 1.10, != 1.10.0
     {[testenv:mypy]deps}
-commands = pytest {posargs} test-stub
+commands = pytest {posargs:test-stub}
 
 [testenv:py{310,311}-rt]
 deps =
@@ -27,8 +27,8 @@ deps =
     pytest >= 7
     lxml == 4.9.*
 commands =
-    pyright test-rt
-    pytest {posargs} test-rt
+    pyright --level error test-rt
+    pytest {posargs:test-rt}
 
 [testenv:format]
 deps =
@@ -36,22 +36,22 @@ deps =
     isort>=5
 package = skip
 commands =
-    isort --check-only --diff {posargs:lxml-stubs}
-    black --check --diff -v {posargs:lxml-stubs}
+    isort --check-only --diff lxml-stubs
+    black --check --diff -v lxml-stubs
 
 [testenv:mypy]
 deps =
     mypy == 1.1.*
     {[common_dep]deps}
 package = skip
-commands = mypy {posargs}
+commands = mypy {posargs:lxml-stubs}
 
 [testenv:pyright]
 deps =
     pyright == 1.1.*, >= 1.1.289
     {[common_dep]deps}
 package = skip
-commands = pyright {posargs}
+commands = pyright {posargs:lxml-stubs}
 
 [testenv:build]
 deps =
