Also run github workflow on other branches

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,8 +2,8 @@ name: Build and test
 
 on:
   push:
-    branches:
-      - 'main'
+    branches-ignore:
+      - 'dependabot/**'
     paths-ignore:
       - '.git*'
       - '**.md'
