--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,9 +39,9 @@ jobs:
       with:
         user: __token__
         password: ${{ secrets.testpypi_token }}
-        repository_url: https://test.pypi.org/legacy/
+        repository-url: https://test.pypi.org/legacy/
         verbose: true
-        print_hash: true
+        print-hash: true
 
     - name: Publish to PyPI
       if: >
@@ -52,4 +52,4 @@ jobs:
         user: __token__
         password: ${{ secrets.pypi_token }}
         verbose: true
-        print_hash: true
+        print-hash: true
