Incompatible with pytest-mypy-plugins 2.0
Current mypy test templates can't be parsed with Jinja2

--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ deps =
 
 [testenv:py{38,39,310,311,312}-stub]
 deps =
-    pytest-mypy-plugins ~= 1.10, != 1.10.0
+    pytest-mypy-plugins >= 1.10.1, < 2.0
     {[testenv:mypy]deps}
 commands = pytest {posargs:test-stub}
 
