--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ homepage = 'https://github.com/abelcheung/types-lxml'
 
 [project.optional-dependencies]
 dev = [
-    'pytest-mypy-plugins >= 1.10.1',
+    'pytest-mypy-plugins >= 1.10.1, < 2.0',
     'pytest >= 7',
     'black',
     'isort >= 5',
