--- a/tox.ini
+++ b/tox.ini
@@ -42,7 +42,7 @@ commands =
 
 [testenv:mypy]
 deps =
-    mypy == 1.1.*
+    mypy >= 1.1, < 1.4
     {[common_dep]deps}
 package = skip
 commands = mypy {posargs:lxml-stubs}
