--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,7 @@ dev = [
     'pytest >= 7',
     'black',
     'isort >= 5',
-    'mypy == 1.1.*',
+    'mypy >= 1.1, < 1.4',
     'pyright == 1.1.*, >= 1.1.289',
     'lxml == 4.9.*',
     'typeguard == 3.0.*'
