--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ authors = [
     { name = 'Abel Cheung', email = 'abelcheung@gmail.com' }
 ]
 classifiers = [
-    'Development Status :: 4 - Beta',
+    'Development Status :: 5 - Production/Stable',
     'Programming Language :: Python',
     'Intended Audience :: Developers',
     'Programming Language :: Python :: 3 :: Only',
@@ -40,7 +40,7 @@ dev = [
     'black',
     'isort >= 5',
     'mypy >= 1.1, < 1.4',
-    'pyright == 1.1.*, >= 1.1.289, < 1.1.332',
+    'pyright >= 1.1.289, < 1.1.332',
     'lxml == 4.9.*',
     'typeguard == 3.0.*'
 ]
