--- a/tox.ini
+++ b/tox.ini
@@ -49,7 +49,7 @@ commands = mypy {posargs:lxml-stubs}
 
 [testenv:pyright]
 deps =
-    pyright >= 1.1.289, < 1.1.332
+    pyright >= 1.1.289
     {[common_dep]deps}
 package = skip
 commands = pyright {posargs:lxml-stubs}
