Use @deprecated from official typing_extensions

--- a/tox.ini
+++ b/tox.ini
@@ -14,6 +14,7 @@ python =
 [common_dep]
 deps =
     types-beautifulsoup4
+    typing_extensions ~= 4.5
 
 [testenv:py{38,39,310,311,312}-stub]
 deps =
