Drop test for retracted OE method due to pyright fix

--- a/.github/workflows/test_inc.yml
+++ b/.github/workflows/test_inc.yml
@@ -50,6 +50,7 @@ jobs:
   test-stub:
     needs: build
     strategy:
+      fail-fast: false
       matrix:
         pyver:
           - "3.8"
@@ -101,6 +102,7 @@ jobs:
   test-rt:
     needs: build
     strategy:
+      fail-fast: false
       matrix:
         pyver:
           - "3.10"
