Sort out dev dependencies

--- a/tox.ini
+++ b/tox.ini
@@ -18,15 +18,15 @@ deps =
 
 [testenv:py{38,39,310,311,312}-stub]
 deps =
-    pytest-mypy-plugins >= 1.10.1, < 2.0
     {[testenv:mypy]deps}
+    pytest-mypy-plugins ~= 1.10, != 1.10.0
 commands = pytest {posargs:test-stub}
 
 [testenv:py{310,311,312}-rt]
 deps =
-    typeguard == 3.0.*
     {[testenv:pyright]deps}
-    pytest >= 7
+    typeguard >= 3.0
+    pytest ~= 7.0
     lxml == 4.9.*
 commands =
     pyright --level error test-rt
@@ -43,15 +43,15 @@ commands =
 
 [testenv:mypy]
 deps =
-    mypy >= 1.1, < 1.4
     {[common_dep]deps}
+    mypy >= 1.2, < 1.4
 package = skip
 commands = mypy {posargs:lxml-stubs}
 
 [testenv:pyright]
 deps =
-    pyright >= 1.1.289
     {[common_dep]deps}
+    pyright >= 1.1.289
 package = skip
 commands = pyright {posargs:lxml-stubs}
 
