--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,14 +35,7 @@ homepage = 'https://github.com/abelcheung/types-lxml'
 
 [project.optional-dependencies]
 dev = [
-    'pytest-mypy-plugins >= 1.10.1, < 2.0',
-    'pytest >= 7',
-    'black',
-    'isort >= 5',
-    'mypy >= 1.1, < 1.4',
-    'pyright >= 1.1.289',
-    'lxml == 4.9.*',
-    'typeguard == 3.0.*'
+    'tox ~= 4.0',
 ]
 
 [tool.pdm.version]
