--- a/test-stub/test-serializer.yml
+++ b/test-stub/test-serializer.yml
@@ -147,7 +147,7 @@
     from lxml.etree import C14NWriterTarget
     sio: StringIO
     t = C14NWriterTarget(sio.write, {{ opt }}=[1])  # E: List item 0 has incompatible type "int"; expected "str"  [list-item]
-    t = C14NWriterTarget(sio.write, {{ opt }}=1)  # E: Argument "{{ opt }}" to "C14NWriterTarget" has incompatible type "int"; expected "Optional[Iterable[str]]"  [arg-type]
+    t = C14NWriterTarget(sio.write, {{ opt }}=1)  # E: Argument "{{ opt }}" to "C14NWriterTarget" has incompatible type "int"; expected "Iterable[str] | None"  [arg-type]
 
 
 - case: c14ntarget_kw_list_bad_2
@@ -223,11 +223,11 @@
   - arg: encoding
     val: 1
     wrong_t: int
-    right_t: Optional[Union[str, bytes]]
+    right_t: str | bytes | None
   - arg: compression
     val: s
     wrong_t: str
-    right_t: Optional[int]
+    right_t: int | None
   - arg: close
     val: None
     wrong_t: None
