--- a/tox.ini
+++ b/tox.ini
@@ -44,7 +44,7 @@ commands =
 [testenv:mypy]
 deps =
     {[common_dep]deps}
-    mypy == 1.5.*
+    mypy >= 1.2, < 1.4
 package = skip
 commands = mypy {posargs:lxml-stubs}
 
