--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -35,7 +35,7 @@ jobs:
         workdir: lxml-stubs
         fail_on_error: true
         ignore_note: true
-        setup_command: pip install 'mypy >= 1.1, < 1.4'
+        setup_command: pip install mypy>=1.1,<1.4
         setup_method: install
 
     - name: Pyright review
