chore: don't trigger GitHub action with .editorcofig [no ci]

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,6 +5,7 @@ on:
     branches-ignore:
       - 'dependabot/**'
     paths-ignore:
+      - '.editorconfig'
       - '.git*'
       - '**.md'
       - 'LICENSE'
