--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,8 @@ htmlcov/
 .cache
 nosetests.xml
 coverage.xml
+.pytest_cache
+.mypy_cache
 
 # Translations
 *.mo
@@ -50,9 +52,6 @@ coverage.xml
 # Sphinx documentation
 docs/_build/
 
-# PyBuilder
-target/
-
 # Local utility scripts
 analyze.py
 
@@ -63,6 +62,3 @@ analyze.py
 .vscode/
 .idea/
 .venv*/
-
-# Mypy cache
-.mypy_cache/
