--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,5 @@
+#:schema https://json.schemastore.org/pyproject.json
+
 [build-system]
 requires = ['setuptools >= 64', 'setuptools_scm ~= 8.0']
 build-backend = 'setuptools.build_meta'
