ci: Workflow file update should trigger rebuild and tests

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,8 +5,10 @@ on:
     branches-ignore:
       - 'dependabot/**'
     paths-ignore:
+      - '**/dependabot.yml'
       - '.editorconfig'
-      - '.git*'
+      - '**/.gitignore'
+      - '**/.gitattributes'
       - '**.md'
       - 'LICENSE'
 
