test: stub test compatability for (mypy 1.5) and (py < 3.10)
- Test cases are using py >= 3.10 syntax
- mypy 1.5 complains if target python version is not set
- Strict mode causes big problem if target py ver set

--- a/tox.ini
+++ b/tox.ini
@@ -16,11 +16,18 @@ deps =
     types-beautifulsoup4
     typing_extensions ~= 4.5
 
-[testenv:py{38,39,310,311,312}-stub]
+[stub_test_dep]
 deps =
     {[common_dep]deps}
     mypy == 1.5.1
     pytest-mypy-plugins ~= 1.10, != 1.10.0
+
+[testenv:py{38,39}-stub]
+deps = {[stub_test_dep]deps}
+commands = pytest --mypy-ini-file=test-stub/mypy-py38.ini {posargs:test-stub}
+
+[testenv:py{310,311,312}-stub]
+deps = {[stub_test_dep]deps}
 commands = pytest {posargs:test-stub}
 
 [testenv:py{310,311,312}-rt]
