Run mypy checks on the test-rt code.
The code in test-rt had to be adjusted because there are some minor
differences between mypy and pyright checks.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,7 +76,7 @@ reportUnnecessaryIsInstance = false
 typeCheckingMode = 'strict'
 
 [tool.mypy]
-packages = 'lxml-stubs'
+files = ['lxml-stubs', 'test-rt']
 strict = true
 show_error_context = true
 pretty = true
