--- a/tox.ini
+++ b/tox.ini
@@ -44,8 +44,9 @@ commands =
 deps =
     {[common_dep]deps}
     mypy >= 1.2, < 1.6
-package = skip
-commands = mypy {posargs:lxml-stubs}
+    typeguard >= 3.0
+    pytest ~= 7.0
+commands = mypy {posargs}
 
 [testenv:pyright]
 deps =
