ci: Github artifact workflow v4 compatibility
Github artifact actions disallow file merging from multiple workers, so extra steps are required to regroup artifacts. Uses extra action to remove individual test logs.

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -54,5 +54,7 @@ jobs:
   all_tests:
     needs: type_checkers
     uses: ./.github/workflows/test_inc.yml
+    permissions:
+      actions: write
     with:
       gitref: ${{ github.ref }}
