--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,8 @@ on:
 
 jobs:
   all_tests:
+    permissions:
+      actions: write
     uses: ./.github/workflows/test_inc.yml
     with:
       gitref: ${{ github.ref }}
