--- a/.github/workflows/test_inc.yml
+++ b/.github/workflows/test_inc.yml
@@ -41,7 +41,7 @@ jobs:
       run: tox run -v -e build
 
     - name: Upload artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: dist
         path: dist/*
@@ -74,7 +74,7 @@ jobs:
         key: ${{ matrix.os }}-${{ env.pythonLocation }}-${{ hashFiles('tox.ini', 'pyproject.toml') }}
 
     - name: Download artifact
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
         name: dist
 
@@ -90,12 +90,12 @@ jobs:
         tox run -v
         --skip-env='.*-rt$'
         --installpkg *.tar.gz
-        --result-json test-stub-${{ strategy.job-index }}.json
+        --result-json test-stub-py${{ matrix.pyver }}.json
 
     - name: Upload log artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
-        name: log
+        name: log-stub-py${{ matrix.pyver }}
         path: test-stub-*.json
         if-no-files-found: error
 
@@ -124,7 +124,7 @@ jobs:
         key: ${{ matrix.os }}-${{ env.pythonLocation }}-${{ hashFiles('tox.ini', 'pyproject.toml') }}
 
     - name: Download artifact
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
         name: dist
 
@@ -140,11 +140,38 @@ jobs:
         tox run -v
         --skip-env='.*-stub$'
         --installpkg *.tar.gz
-        --result-json test-rt-${{ strategy.job-index }}.json
+        --result-json test-rt-py${{ matrix.pyver }}.json
 
     - name: Upload log artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
-        name: log
+        name: log-rt-py${{ matrix.pyver }}
         path: test-rt-*.json
         if-no-files-found: error
+
+  log-aggregation:
+    if: ${{ always() }}
+    needs: [test-stub, test-rt]
+    runs-on: ubuntu-latest
+    permissions:
+      actions: write
+    steps:
+
+    - name: Download logs
+      uses: actions/download-artifact@v4
+      with:
+        path: all-logs
+        pattern: log-*
+        merge-multiple: true
+
+    - name: Upload logs
+      uses: actions/upload-artifact@v4
+      with:
+        name: all-logs
+        path: all-logs
+        if-no-files-found: error
+
+    - name: Remove individual logs
+      uses: geekyeggo/delete-artifact@v4
+      with:
+        name: log-*
