fix: Sweep mypy error about PEP702 under carpet
Mypy's own deficiency shouldn't be a roadblock for users. Right now not many users would use that feature, and pyright is just working fine.

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -36,7 +36,7 @@ jobs:
         workdir: lxml-stubs
         fail_on_error: true
         ignore_note: true
-        setup_command: pip install mypy==1.5.1
+        setup_command: pip install mypy
         setup_method: install
         install_types: false
 
