--- a/tox.ini
+++ b/tox.ini
@@ -43,7 +43,7 @@ commands =
 [testenv:mypy]
 deps =
     {[common_dep]deps}
-    mypy >= 1.2, != 1.6.0
+    mypy >= 1.2, < 1.6
 package = skip
 commands = mypy {posargs:lxml-stubs}
 
